changed content to be pie related, fixed spacing in section 2

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ body {
     gap: 16px;
 }
 
+.nav-items a {
+    text-decoration: none;
+    color: white;
+}
+
 .section-1 {
     display: flex;
     background-color: #1f2937;
@@ -93,7 +98,7 @@ body {
 }
 
 .section-1-button {
-    width: 100px;
+    width: 150px;
     border-radius: 5px;
     padding: 5px 24px;
     background-color: #3b82f6;
@@ -124,10 +129,14 @@ body {
 }
 
 .tile-box {
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     font-weight: normal;
     text-align: center;
-    flex: 1;
+    flex: 1 0 0;
+    min-width: 100px;
     font-size: 12px;
     font-weight: 100;
 }
